assets/ingress-uis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/vault"
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
      # - pathType: Prefix
      #   path: "/bar"
      #   backend:
      #     service:
      #       name: bar-service
      #       port:
      #         number: 5678
